Avance en el index

--- a/index.html
+++ b/index.html
@@ -36,11 +36,30 @@
         </section>
       </nav>
     </header>
-    <div class="container"></div>
-    <section class="principal"> 
-      <div class="principal__contenido"></div>
-    </section>
-    <h1>hola</h1>
+    <div class="container">
+      <section class="principal">
+        <div class="principal__contenido">
+          <p>LO FAMILIAR  <br/> lo volvemos <br/> <strong>INSTITUCIONAL</strong></p>
+        </div>
+      </section>
+      <section class="contentindex">
+        <div class="contentindex__txt1">
+          <p>SOLUCIONES <br/> <strong>EFICACES</strong> <br/> A SU EMPRESA</p>
+        </div>
+      </section>
+      <section class="objetivos">
+        <div class="objetivos__contenido">
+          <p>DEFINIMOS  <br/> <strong>OBJETIVOS <br/> PUNTUALES</strong></p>
+          <p>PARA TU EMPRESA</p>
+        </div>
+      </section>
+      <section class="arrow"> 
+        <div class="arrow__contenido"><img src="images/iconos/arrow_index.svg" alt="Ícono de grafica"/>
+          <p>ACELERA LA <br/> <strong>PRODUCTIVIDAD</strong>    </p>
+          <p>DE TU <br/> <strong>EQUIPO DE VENTAS</strong>   </p>
+        </div>
+      </section>
+    </div>
     <footer>
       <div class="footer__box">
         <div class="footer__box__body">
