index terminado mobile v1

--- a/index.html
+++ b/index.html
@@ -54,9 +54,28 @@
         </div>
       </section>
       <section class="arrow"> 
-        <div class="arrow__contenido"><img src="images/iconos/arrow_index.svg" alt="Ícono de grafica"/>
-          <p>ACELERA LA <br/> <strong>PRODUCTIVIDAD</strong>    </p>
-          <p>DE TU <br/> <strong>EQUIPO DE VENTAS</strong>   </p>
+        <div class="arrow__contenido">
+          <p>ACELERA LA <br/> <strong>PRODUCTIVIDAD</strong> DE TU <br/> <strong>EQUIPO DE VENTAS</strong>  </p>
+        </div>
+      </section>
+      <section class="ajedrez"> 
+        <div class="ajedrez__contenido"><img src="images/iconos/ajedrez_index.svg" alt="Ícono de Pieza ajedrez"/>
+          <p>DISEÑAMOS <br/> <strong>ESTRATEGIAS</strong> <br/> <strong>ECHAS A LA MEDIDA</strong>   </p>
+        </div>
+      </section>
+      <section class="utilidades">
+        <div class="utilidades__contenido">
+          <p><strong>INCREMENTE UTILIDADES</strong> <br/> ESTABLECIENDO LAS  <br/> MEJORES <strong>ESTRATEGIAS FISCALES</strong>     </p>
+        </div>
+      </section>
+      <section class="especialistas">
+        <div class="especialistas__contenido">
+          <p>SOMOS <br/> <strong>ESPECIALISTAS</strong> <br/> <strong>EN EMPRESAS FAMILIARES</strong> </p>
+        </div>
+      </section>
+      <section class="implementacion">
+        <div class="implementacion__contenido">
+          <p><strong>IMPLEMENTAMOS</strong> <br/> REQUISITOS PARA <strong>CUMPLIR</strong> <br/> CON LINEAMIENTO DE LA <br/> <strong>NOM-035</strong>  ANTE LA <strong>STPS</strong></p>
         </div>
       </section>
     </div>
