avance de login y vista usuario v1

--- a/login.html
+++ b/login.html
@@ -36,6 +36,28 @@
         </section>
       </nav>
     </header>
+    <div class="login"><img src="/images/iconos/login.svg" alt=""/>
+      <div class="login__title title"> <strong>Iniciar sesión</strong></div>
+      <form class="login__formLogin">
+        <div class="login__formLogin__box box">
+          <div class="form-group">
+            <label for="exampleInputEmail1"><strong>Email address</strong></label>
+            <div class="icono"> <img src="/images/iconos/maillogin.svg" alt=""/>
+              <input class="form-control" id="exampleInputEmail1" type="email" aria-describedby="emailHelp" placeholder="Enter email"/>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1"><strong>Password</strong></label>
+            <div class="icono"> <img src="images/iconos/password.svg" alt=""/>
+              <input class="form-control" id="exampleInputPassword1" type="password" placeholder="Password"/>
+            </div>
+          </div>
+          <div class="form-group form-check">
+            <button class="btn btn-warning" type="submit"> Ingresar</button>
+          </div>
+        </div>
+      </form>
+    </div>
     <footer>
       <div class="footer__box">
         <div class="footer__box__body">
