--- a/usuario.html
+++ b/usuario.html
@@ -36,6 +36,30 @@
         </section>
       </nav>
     </header>
+    <div class="usuario">
+      <section class="user">
+        <div class="user__nombre"><img src="images/iconos/user.svg" alt=""/>
+          <p>Nombre de Usuario</p>
+        </div>
+      </section>
+    </div>
+    <div class="caja">
+      <section class="citas"> 
+        <div class="citas__principal"><img src="images/iconos/calendario.svg" alt=""/>
+          <p>Proximas <br/> Citas</p>
+        </div>
+      </section>
+      <section class="bitacora"> 
+        <div class="bitacora__principal"><img src="images/iconos/book.svg" alt=""/>
+          <p>Bitacora de <br/>servicio</p>
+        </div>
+      </section>
+      <section class="descargas">  
+        <div class="descargas__principal"> <img src="images/iconos/descargas.svg" alt=""/>
+          <p>Descargas </p>
+        </div>
+      </section>
+    </div>
     <footer>
       <div class="footer__box">
         <div class="footer__box__body">
