--- a/contacto.html
+++ b/contacto.html
@@ -29,8 +29,8 @@
             <h2>Menú</h2>
             <li class="menu__item"> <a class="menu__link" href="index.html">Inicio</a></li>
             <li class="menu__item"> <a class="menu__link" href="somos.html">¿Quienes somos?</a></li>
-            <li class="menu__item"> <a class="menu__link" href="#">Contacto</a></li>
-            <li class="menu__item"> <a class="menu__link" href="#">Iniciar sesion</a></li>
+            <li class="menu__item"> <a class="menu__link" href="contacto.html">Contacto</a></li>
+            <li class="menu__item"> <a class="menu__link" href="login.html">Iniciar sesion</a></li>
           </ul>
           <div class="menu__hamburger"> <img class="menu__img" src="images/iconos/menu.svg" alt="icono de menu"/></div>
         </section>
@@ -40,6 +40,17 @@
       <div class="qcontacto"> 
         <div class="qcontacto__title"> 
           <p><strong>INGENIERIA INTEGRAL</strong></p>
+        </div>
+      </div>
+      <div class="infoContacto">
+        <div class="infoContacto__one"> 
+          <p>¿Qué es Lorem Ipsum? Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.</p>
+        </div>
+        <div class="infoContacto__two"> 
+          <p>No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas "Letraset", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.   </p>
+        </div>
+        <div class="infoContacto__three"> 
+          <p>Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor N. del T. persona que se dedica a la imprenta desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</p>
         </div>
       </div>
     </div>
