--- a/usuario.html
+++ b/usuario.html
@@ -45,19 +45,13 @@
     </div>
     <div class="caja">
       <section class="citas"> 
-        <div class="citas__principal"><img src="images/iconos/calendario.svg" alt=""/>
-          <p>Proximas <br/> Citas</p>
-        </div>
+        <div class="citas__principal"><img src="images/iconos/calendario.svg" alt=""/><a href="proximascitasU.html">Proximas <br/> Citas</a></div>
       </section>
       <section class="bitacora"> 
-        <div class="bitacora__principal"><img src="images/iconos/book.svg" alt=""/>
-          <p>Bitacora de <br/>servicio</p>
-        </div>
+        <div class="bitacora__principal"><img src="images/iconos/book.svg" alt=""/><a href="bitacoraU.html">Bitacora de <br/>servicio</a></div>
       </section>
       <section class="descargas">  
-        <div class="descargas__principal"> <img src="images/iconos/descargas.svg" alt=""/>
-          <p>Descargas </p>
-        </div>
+        <div class="descargas__principal"> <img src="images/iconos/descargas.svg" alt=""/><a href="descargasU.html">Descargas </a></div>
       </section>
     </div>
     <footer>
