--- a/usuario.html
+++ b/usuario.html
@@ -21,16 +21,17 @@
     <script src="https://code.jquery.com/jquery-latest.js"></script>
   </head>
   <body> 
-    <header> 
+    <header>
       <h1>Ingenieria <br/>Integral</h1>
       <nav class="menu"> 
         <section class="menu__container"> 
           <ul class="menu__links"> 
             <h2>Menú</h2>
             <li class="menu__item"> <a class="menu__link" href="index.html">Inicio</a></li>
-            <li class="menu__item"> <a class="menu__link" href="somos.html">¿Quienes somos?</a></li>
-            <li class="menu__item"> <a class="menu__link" href="contacto.html">Contacto</a></li>
-            <li class="menu__item"> <a class="menu__link" href="login.html">Iniciar sesion</a></li>
+            <li class="menu__item"> <a class="menu__link" href="proximascitasU.html">Proximas citas</a></li>
+            <li class="menu__item"> <a class="menu__link" href="bitacoraU.html">Bitacoras de servicios</a></li>
+            <li class="menu__item"> <a class="menu__link" href="descargasU.html">Descargas</a></li>
+            <li class="menu__item"> <a class="menu__link" href="#">Cerrar Sesion </a></li>
           </ul>
           <div class="menu__hamburger"> <img class="menu__img" src="images/iconos/menu.svg" alt="icono de menu"/></div>
         </section>
