--- a/html/pcitasadmin.html
+++ b/html/pcitasadmin.html
@@ -22,59 +22,28 @@
   </head>
   <body> 
     <header>
-      <h1>Ingenieria <br/>Integral</h1>
       <nav class="menu"> 
         <section class="menu__container"> 
           <ul class="menu__links"> 
             <h2>Menú</h2>
             <li class="menu__item"> <a class="menu__link" href="index.html">Inicio</a></li>
-            <li class="menu__item"> <a class="menu__link" href="proximascitasU.html">Proximas citas</a></li>
-            <li class="menu__item"> <a class="menu__link" href="bitacoraU.html">Bitacoras de servicios</a></li>
-            <li class="menu__item"> <a class="menu__link" href="descargasU.html">Descargas</a></li>
+            <li class="menu__item"> <a class="menu__link" href="listaclientes.html">Lista de Clientes</a></li>
+            <li class="menu__item"> <a class="menu__link" href="#.html">Bitacoras de servicios</a></li>
+            <li class="menu__item"> <a class="menu__link" href="#.html">Proximas citas </a></li>
+            <li class="menu__item"> <a class="menu__link" href="#.html">Descargas</a></li>
             <li class="menu__item"> <a class="menu__link" href="#">Cerrar Sesion </a></li>
           </ul>
           <div class="menu__hamburger"> <img class="menu__img" src="images/iconos/menu.svg" alt="icono de menu"/></div>
         </section>
       </nav>
     </header>
-    <div class="titulo__citasU"> 
-      <p><strong>Proximas Citas</strong></p>
-    </div>
-    <div class="buscar__citasU"> 
-      <label for="buscador"> </label>
-      <input type="text" placeholder="Search.." name="search"/>
-      <button type="submit">Buscar</button>
-    </div>
-    <div class="proximascitasU">
-      <div class="inicio">
-        <form action="">
-          <label for="calendario"><span>Fecha Inicio</span>
-            <input id="calendario" type="date" name="calendario"/>
-          </label>
-        </form>
-      </div>
-      <div class="final">
-        <form action="">
-          <label for="calendario"><span>Fecha Final</span>
-            <input id="calendario" type="date" name="calendario"/>
-          </label>
-          <input type="submit"/>
-        </form>
-      </div>
-    </div>
-    <footer>
-      <div class="footer__box">
-        <div class="footer__box__body">
-          <div class="footer__box__body-address"> <img src="images/iconos/ubicacion.svg" alt="ícono de ubicación"/>
-            <p>Priv. Rosalia Monroy # 103, Barrio de la Estación, Aguascalientes</p>
-          </div>
-          <div class="footer__box__body-ayuda"><a href="#"> <img src="images/iconos/help.svg" alt="Ícono de Ayuda"/></a></div>
-          <div class="footer__box__body-socialmedia">
-            <h2>SÍGUENOS</h2>
-            <div class="footer__box__body-socialmedia-icons"><a href="https://facebook.com"> <img src="images/iconos/facebook.svg" alt="Ícono de facebook"/></a><a href="https://instagram.com"> <img src="images/iconos/instagram.svg" alt="Ícono de instagram"/></a><a href="https://gmail.com"> <img src="images/iconos/gmail.svg" alt="Ícono de gmail"/></a></div>
-          </div>
+    <footer> 
+      <div class="footer__foot"> 
+        <div class="rights">
+          <p>INGENIERIA INTEGRAL</p>
         </div>
-        <script src="js/app-dist.js"></script>
+        <p class="divisor"><strong>|</strong></p>
+        <div class="link__jmc"> <a href="https://jmcsoluciones.com" target="_blank">Desarrollado por <strong>JMC Soluciones</strong></a></div>
       </div>
     </footer>
   </body>
