--- a/bitacoraU.html
+++ b/bitacoraU.html
@@ -14,11 +14,14 @@
     <link rel="stylesheet" href="css/menu.css"/>
     <link rel="stylesheet" href="css/form.css"/>
     <link rel="shortcut icon" href="images/favIcon.png"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"/>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"/>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
   <body> 
     <header>
@@ -31,7 +34,7 @@
             <li class="menu__item"> <a class="menu__link" href="proximascitasU.html">Proximas citas</a></li>
             <li class="menu__item"> <a class="menu__link" href="bitacoraU.html">Bitacoras de servicios</a></li>
             <li class="menu__item"> <a class="menu__link" href="descargasU.html">Descargas</a></li>
-            <li class="menu__item"> <a class="menu__link" href="#">Cerrar Sesion </a></li>
+            <li class="menu__item"> <a class="menu__link" href="login.html">Cerrar Sesion </a></li>
           </ul>
           <div class="menu__hamburger"> <img class="menu__img" src="images/iconos/menu.svg" alt="icono de menu"/></div>
         </section>
@@ -48,7 +51,7 @@
     <table class="table table-striped table-hover">
       <thead> 
         <tr>                 
-          <th>id</th>
+          <th>ID</th>
           <th>Fecha</th>
           <th>Detalles </th>
         </tr>
@@ -57,15 +60,26 @@
         <tr> 
           <td>001</td>
           <td>08/18/2023</td>
-          <td> <a href="#verzualizarProductoModal" data-toggle="modal">detalles... </a></td>
+          <td> <a href="#verzualizarProductoModal" data-toggle="modal">ver mas... </a></td>
         </tr>
         <tr> 
           <td>002</td>
           <td>02/30/2023 </td>
-          <td> <a href="#verzualizarProductoModal" data-toggle="modal">detalles... </a></td>
+          <td> <a href="#verzualizarProductoModal" data-toggle="modal">ver mas... </a></td>
         </tr>
       </tbody>
     </table>
+    <div class="content__CtrlProductos__tabs__item__footer">
+      <nav aria-label="...">
+        <ul class="pagination">
+          <li class="page-item disabled"><a class="page-link">Previous</a></li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item active" aria-current="page"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+      </nav>
+    </div>
     <footer>
       <div class="footer__box">
         <div class="footer__box__body">
